--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/icon.png" />
+  <link rel="icon" type="image/png" href="/icon.png" />
 
   <link rel="preload" href="/fonts/open-sans-regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/fonts/open-sans-500.woff2" as="font" type="font/woff2" crossorigin>
