two sections added

--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
       </div>
       <nav class="header__nav nav">
         <ul class="nav__items">
-          <li class="nav__item">
-            <a href="#about">О&nbsp;нас</a>
-          </li>
           <li class="nav__item ">
             <a href="#projects">Проекты</a>
           </li>
@@ -44,10 +41,10 @@
             <a href="#sertificates">Сертификаты</a>
           </li>
           <li class="nav__item">
-            <a href="#partners">Партнеры и&nbsp;клиенты</a>
+            <a href="#resources">Ресурсы</a>
           </li>
           <li class="nav__item">
-            <a href="#library">Библиотека</a>
+            <a href="#about">О&nbsp;нас</a>
           </li>
           <li class="nav__item">
             <a href="#contacts">Контакты</a>
@@ -65,37 +62,8 @@
   </header>
 
   <main>
-    <section class="section about" id="about">
-      <div class="container">
-        <h1 class="visually-hidden">ИнГениуум / Engenium - Консорциум проактивных людей для проактивных компаний</h1>
-        <h2 class="title">О нас</h2>
-        <p class="about__text"><span>Консорциум &quot;ИнГениум&quot;/&quot;ЕnGenium&quot;</span> создан 21&nbsp;ноября
-          2024&nbsp;г.
-          В&nbsp;его состав вошли
-          индивидуальные предприниматели Республики Беларусь и&nbsp;Российской Федерации,
-          физические лица.</p>
-        <p class="about__text">Организационная форма Консорциума предполагает объединение на&nbsp;добровольных
-          началах без образования нового юридического лица различных физических и
-          юридических лиц (вне зависимости от&nbsp;организационно-правовой формы, порядка и
-          источников формирования имущества (капитала), страны происхождения
-          (регистрации) и&nbsp;т.д.) и&nbsp;индивидуальных предпринимателей, которые не&nbsp;утрачивают
-          своей юридической и&nbsp;экономической самостоятельности, где каждый вносит свой вклад
-          (финансовый, материальный, управленческий, интеллектуальный, трудовой и&nbsp;т.д.) для
-          совместного достижения поставленных целей и&nbsp;решения задач Консорциума.</p>
-        <p class="about__text">Консорциум &laquo;ИнГениум&raquo; создан для консолидации усилий сторон для проведения
-          совместных курсов целевого назначения, мероприятий, конкурсов и&nbsp;соревнований,
-          создания платформы для обмена опытом, оказания консультационных услуг и&nbsp;др.&nbsp;по
-          таким направлениям как обучение в&nbsp;отрасли (TWI), генерация новых идей (ТРИЗ, дизайн-
-          мышление), бережливое производство (Кайдзен, Лин, кружки качества), наставничество,
-          рационализация и&nbsp;интеллектуальная собственность.</p>
-        <p class="about__text"><span>Главная задача консорциума&nbsp;&mdash;</span> стать центром притяжения
-          компаний, готовых и&nbsp;способных
-          меняться, развиваться и&nbsp;расти, стремящихся использовать знания и&nbsp;творческий потенциал
-          своих сотрудников для достижения успеха и&nbsp;конкурентной устойчивости на&nbsp;рынке.</p>
-      </div>
-    </section>
 
-    <section class="section projects" id="projects">
+    <section class="section projects section_first" id="projects">
       <div class="container">
         <h2 class="title">Проекты Консорциума</h2>
         <ol class="projects__list">
@@ -344,7 +312,7 @@
             <div class="project__wrapper hidden">
               <p class="project__text">
                 <span>Цель:</span>
-                Курс, направлен на&nbsp;отработку навыков совместных управленческих
+                Курс направлен на&nbsp;отработку навыков совместных управленческих
                 действий. Итогом обучения станут новые знания и&nbsp;практические рекомендации по
                 экономии рабочего времени для решения ежедневных управленческих задач,
                 снижение потерь информации при коммуникациях.
@@ -658,6 +626,42 @@
       </div>
     </section>
 
+    <section class="section events" id="events">
+      <div class="container">
+        <h2 class="title">Наши мероприятия</h2>
+        <p class="events__text">
+          <span>3-4 апреля 2025&nbsp;г.</span> команда экспертов консорциума &laquo;Ингениум&raquo; провела
+          корпоративное обучение
+          в&nbsp;динамично развивающейся
+          компании &laquo;ФреБор&raquo;, выпускающей изделия медицинского назначения.
+        </p>
+        <p class="events__text">
+          Специалисты предприятия на&nbsp;протяжении 2-x&nbsp;дней знакомились
+          с&nbsp;инструментами бережливого производства, в&nbsp;формате имитационного обучения осваивали теорию
+          и&nbsp;практику
+          Lean-подхода,
+          отрабатывали Lean-методы для построения эффективной производственной системы и&nbsp;технику быстрой
+          переналадки.
+        </p>
+        <div class="events__imgs">
+          <div class="events__img">
+            <picture>
+              <source srcset="/img/event03.04.25-1.avif">
+              <source srcset="/img/event03.04.25-1.webp">
+              <img src="/img/event03.04.25-1.jpg" alt="фото с мероприятия" loading="lazy">
+            </picture>
+          </div>
+          <div class="events__img">
+            <picture>
+              <source srcset="/img/event03.04.25-2.avif">
+              <source srcset="/img/event03.04.25-2.webp">
+              <img src="/img/event03.04.25-2.jpg" alt="фото с мероприятия" loading="lazy">
+            </picture>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="section sertificates" id="sertificates">
       <div class="container">
         <h2 class="title">Индивидуальный цифровой бейдж &laquo;EnGenium&raquo;</h2>
@@ -714,6 +718,136 @@
         </ul>
       </div>
     </section>
+
+    <section class="section resources" id="resources">
+      <div class="container">
+        <h2 class="title">Ресурсы</h2>
+        <div class="resources__item">
+          <div class="resources__img">
+            <img src="/img/book-1.jpg" alt="книга" loading="lazy">
+          </div>
+          <div class="resources__info">
+            <p class="resources__name">
+              Бережливое производство: Как избавиться
+              от&nbsp;потерь и&nbsp;добиться процветания вашей компании
+            </p>
+            <p class="resources__author">Дэниел Джонс, Джеймс Вумек</p>
+          </div>
+          <p class="resources__desc">
+            Книга о&nbsp;бережливом производстве (lean production)&nbsp;&mdash; прорывном подходе к&nbsp;менеджменту
+            и&nbsp;управлению качеством, обеспечивающем долговременную конкурентоспособность
+            без существенных капиталовложений. Пионером этого подхода стала компания Toyota,
+            которая благодаря его использованию достигла выдающихся результатов.
+          </p>
+        </div>
+        <div class="resources__item">
+          <div class="resources__img">
+            <img src="/img/book-2.png" alt="книга" loading="lazy">
+          </div>
+          <div class="resources__info">
+            <p class="resources__name">
+              Инструменты бережливого производства II: Карманное руководство по&nbsp;практике применения Lean
+            </p>
+            <p class="resources__author">Майкл Вейдер</p>
+          </div>
+          <p class="resources__desc">
+            Книга о&nbsp;тонкостях концепции ЛИН, благодаря которой возможно
+            сокращение затрат на&nbsp;производство, перепроизводство, долгое ожидание
+            готовой продукции и&nbsp;многих других скрытых потерь.
+          </p>
+        </div>
+        <div class="resources__item">
+          <div class="resources__img">
+            <img src="/img/book-3.jpg" alt="книга" loading="lazy">
+          </div>
+          <div class="resources__info">
+            <p class="resources__name">Наставничество 101</p>
+            <p class="resources__author">Джон Максвелл</p>
+          </div>
+          <p class="resources__desc">
+            Книга о&nbsp;том, что помогло любой процветающей организации
+            взойти на&nbsp;самый верх. У&nbsp;них всех &nbsp;были хорошие наставники.
+            Джон Максвелл, международный эксперт по&nbsp;вопросам
+            лидерства, на&nbsp;страницах этой маленькой книжки просто и
+            доходчиво объясняет главные принципы наставничества. Он
+            описывает основные шаги, следуя которым можно достичь
+            успеха самому и&nbsp;привести к&nbsp;нему всю команду.
+          </p>
+        </div>
+        <div class="resources__item">
+          <div class="resources__img">
+            <img src="/img/book-4.jpg" alt="книга" loading="lazy">
+          </div>
+          <div class="resources__info">
+            <p class="resources__name">TWI в развитии производственных систем</p>
+            <p class="resources__author">Сергей Леонидович Смирнов</p>
+          </div>
+          <p class="resources__desc">
+            В&nbsp;книге представлен практический опыт реализации TWI (Training Within Industry) в&nbsp;различных
+            отраслях российской экономики, основанный на&nbsp;43-летней практике Сергея Смирнова&nbsp;&mdash;
+            эксперта и
+            автора переводов и&nbsp;адаптации учебников TWI для российских предприятий. В&nbsp;издании
+            представлены практические результаты применения TWI в&nbsp;разных сферах: от&nbsp;промышленности до
+            медицины и&nbsp;торговли. Книга будет полезна собственникам, руководителям всех уровней, HR-
+            специалистам и&nbsp;экспертам по&nbsp;развитию производственных систем, заинтересованным в&nbsp;создании
+            эффективной системы обучения персонала.
+          </p>
+        </div>
+        <div class="resources__item">
+          <div class="resources__img">
+            <img src="/img/book-5.jpg" alt="книга" loading="lazy">
+          </div>
+          <div class="resources__info">
+            <p class="resources__name">
+              Путеводитель по&nbsp;TWI: Все о&nbsp;лучшей в&nbsp;мире системе наставничества и&nbsp;не&nbsp;только
+            </p>
+            <p class="resources__author">Наталия Александрова</p>
+          </div>
+          <p class="resources__desc">
+            TWI&nbsp;&mdash; это система подготовки руководителей и&nbsp;развития у&nbsp;них базовых
+            навыков.
+            В&nbsp;России TWI больше известна как лучшая в&nbsp;мире методика
+            наставничества. В&nbsp;оригинале&nbsp;же это шесть пошаговых алгоритмов,
+            облегчающих достижение бизнес-задач.
+            Это единственная на сегодняшний день книга на&nbsp;русском языке, которая
+            не только подробно описывает каждую технологию TWI, но также
+            содержит практические советы, кейсы&nbsp;из&nbsp;реальной жизни
+            и&nbsp;рекомендации по&nbsp;внедрению методики в&nbsp;вашей организации.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section about " id="about">
+      <div class="container">
+        <h1 class="visually-hidden">ИнГениуум / Engenium - Консорциум проактивных людей для проактивных компаний</h1>
+        <h2 class="title">О нас</h2>
+        <p class="about__text"><span>Консорциум &quot;ИнГениум&quot;/&quot;ЕnGenium&quot;</span> создан 21&nbsp;ноября
+          2024&nbsp;г.
+          В&nbsp;его состав вошли
+          индивидуальные предприниматели Республики Беларусь и&nbsp;Российской Федерации,
+          физические лица.</p>
+        <p class="about__text">Организационная форма Консорциума предполагает объединение на&nbsp;добровольных
+          началах без образования нового юридического лица различных физических и
+          юридических лиц (вне зависимости от&nbsp;организационно-правовой формы, порядка и
+          источников формирования имущества (капитала), страны происхождения
+          (регистрации) и&nbsp;т.д.) и&nbsp;индивидуальных предпринимателей, которые не&nbsp;утрачивают
+          своей юридической и&nbsp;экономической самостоятельности, где каждый вносит свой вклад
+          (финансовый, материальный, управленческий, интеллектуальный, трудовой и&nbsp;т.д.) для
+          совместного достижения поставленных целей и&nbsp;решения задач Консорциума.</p>
+        <p class="about__text">Консорциум &laquo;ИнГениум&raquo; создан для консолидации усилий сторон для проведения
+          совместных курсов целевого назначения, мероприятий, конкурсов и&nbsp;соревнований,
+          создания платформы для обмена опытом, оказания консультационных услуг и&nbsp;др.&nbsp;по
+          таким направлениям как обучение в&nbsp;отрасли (TWI), генерация новых идей (ТРИЗ, дизайн-
+          мышление), бережливое производство (Кайдзен, Лин, кружки качества), наставничество,
+          рационализация и&nbsp;интеллектуальная собственность.</p>
+        <p class="about__text"><span>Главная задача консорциума&nbsp;&mdash;</span> стать центром притяжения
+          компаний, готовых и&nbsp;способных
+          меняться, развиваться и&nbsp;расти, стремящихся использовать знания и&nbsp;творческий потенциал
+          своих сотрудников для достижения успеха и&nbsp;конкурентной устойчивости на&nbsp;рынке.</p>
+      </div>
+    </section>
+
   </main>
   <footer class="footer" id="contacts">
     <div class="container footer__container">
@@ -724,9 +858,6 @@
         <nav class="footer__nav nav footer__group footer__group_map">
           <p class="footer__title">Консорциум</p>
           <ul class="nav__items">
-            <li class="nav__item footer__link">
-              <a href="#about">О&nbsp;нас</a>
-            </li>
             <li class="nav__item footer__link">
               <a href="#projects">Наши проекты</a>
             </li>
@@ -740,23 +871,26 @@
               <a href="#sertificates">Наши сертификаты</a>
             </li>
             <li class="nav__item footer__link">
-              <a href="#partners">Партнеры и клиенты</a>
+              <a href="#library">Наши ресурсы</a>
             </li>
             <li class="nav__item footer__link">
-              <a href="#library">Библиотека консорциума</a>
+              <a href="#about">О&nbsp;нас</a>
             </li>
           </ul>
         </nav>
         <div class="footer__group footer__group_contacts">
           <p class="footer__title">Контакты</p>
           <p class="footer__link">
-            <a href="tel:+375259107721" aria-label="контактный телефон">+375(25)910-77-21</a>
+            <a href="tel:+375296530108" aria-label="контактный телефон">+375 (29) 653-01-08</a>
           </p>
           <p class="footer__link">
-            <a href="tel:+375296530108" aria-label="контактный телефон">+375(29)653-01-08</a>
+            <a href="tel:+375296348185" aria-label="контактный телефон">+375 (29) 634-81-85</a>
           </p>
           <p class="footer__link">
-            <a href="mailto:j_komarova@mail.ru" target="_blank" aria-label="электронная почта">j_komarova@mail.ru</a>
+            <a href="tel:+375259107721" aria-label="контактный телефон">+375 (25) 910-77-21</a>
+          </p>
+          <p class="footer__link">
+            <a href="mailto:info@engenium.net" target="_blank" aria-label="электронная почта">info@engenium.net</a>
           </p>
           <p class="footer__link">
             <a href="https://t.me/engenium" target="_blank" aria-label="ссылка на телеграм">t.me/engenium</a>
@@ -767,7 +901,7 @@
 
       <div class="footer__bottom">
         <p class="footer__text">&copy; Консорциум ИнГениум/Engenium 2025 Все&nbsp;права&nbsp;защищены</p>
-        <p class="footer__text">Разработка: 
+        <p class="footer__text">Разработка:
           <a href="https://t.me/Olga_Zh_1" target="_blank">Ольга Жебит</a>
         </p>
       </div>
